--- a/buttons-template/buttons.css
+++ b/buttons-template/buttons.css
@@ -4,9 +4,10 @@ body{
 }
 
 .container{
+    width: 600px;
+    height: 600px;
     margin-left: 200px;
     margin-top: 100px;
-    border: 2px solid gray;
 }
 
 .waardestyle > img:nth-last-of-type(1){
